src/objects/BGCM__Deep_Clone_Child_Setting__mdt.object
<CustomObject>
    <description>For configuring which related lists on a given record will be cloned when using the Deep Clone functionality.</description>
    <fields>
        <fullName>BGCM__Child_Relationship_Name__c</fullName>
        <description>API Name of the child relationship for the related list to be cloned.</description>
        <inlineHelpText>API Name of the child relationship for the related list to be cloned. eg. child_relationship__r Relationship must be to the parent object specified in the related Clone Parent setting.</inlineHelpText>
        <label>Child Relationship Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCM__Deep_Clone_Parent_Setting__c</fullName>
        <description>The Deep Clone Parent Setting for this cloned child related list.</description>
        <inlineHelpText>The Deep Clone Parent Setting for this cloned child related list.</inlineHelpText>
        <label>Deep Clone Parent Setting</label>
        <referenceTo>BGCM__Deep_Clone_Parent_Setting__mdt</referenceTo>
        <relationshipLabel>Deep Clone Child Settings</relationshipLabel>
        <relationshipName>Deep_Clone_Child_Settings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>BGCM__Default_Values__c</fullName>
        <description>When set, these values will override the values on the record being cloned. List should be separated by commas. Note: this functionality should be used in the case of objects using Sequence Numbers, to set Name to &quot;System Number&quot;. 
Syntax example: Field_API_Name__c = &quot;Default Value&quot;; Field_API_Name2__c = &quot;Default Value&quot;.</description>
        <inlineHelpText>Optional. Field Name value pairs that override the copied values of the cloned record. Syntax example: Text_Field_Name__c = &quot;Default Value&quot;, Blank_Value__c = &quot;&quot;, Checkbox_Field_Name__c = false, Number_Field_Name__c = 123</inlineHelpText>
        <label>Default Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Deep Clone Child Setting</label>
    <pluralLabel>Deep Clone Child Settings</pluralLabel>
</CustomObject>